welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: value update is not a member of Boolean
	while(vuBiscuit() = false)
              ^